# agloader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-windows-vs2026.yml
src/: agloader.ixx  loaded_instance.cpp  loaded_instance.cppm  loaded_instance_impl.cpp  loaded_instance_linux.cppm  loaded_instance_msvc.cpp  loaded_instance_msvc.cppm  loaded_instance_utils.cpp  loader.cpp  loader.cppm  loader_export.hpp  loader_impl.cpp  loader_management.cpp  loader_management_impl.cpp
tests/: CMakeLists.txt  catch_include.hpp  init.tests.cpp  main.cpp
